--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
   </head>
   <body>
     <div class="container">
-        <div class="row mt-5">
+      <div class="card">
+        <div class="card-body">
+          <div class="row mt-5">
             <div class="col">
                 <h1 style="color: #ddd5da;">Ramalan Cuaca</h1>
             </div>
@@ -48,6 +50,9 @@
             </div>
         </div>
     </div>
+        </div>
+      </div>
+        
 
     <div class="container mt-5 result">
         
